--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+node_modules/
+.env
+.DS_Store
+dist/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
